fix travis descriptor

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
    - docker
 
 script:
-   - ./builld build
+   - ./build build
 
 after_success:
    - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
